# favsToKindle

./: .gitignore  README.md  config.json.example  favsToKindle.cabal
src/: Config.hs  Kindle.hs  Main.hs  Twitter.hs
