name:                favsToKindle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/favsToKindle#readme
license:             BSD3
license-file:        LICENSE
author:              Julien Blanchard
maintainer:          julien@sideburns.eu
copyright:           2017 Julien Blanchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Twitter
  build-depends:       base >=4.6
                     , bytestring
                     , utf8-string
                     , aeson
                     , http-conduit
                     , authenticate-oauth
  hs-source-dirs:      src
  default-language:    Haskell2010

executable favsToKindle
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Twitter
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , utf8-string
                     , aeson
                     , http-conduit
                     , authenticate-oauth
